# vr-tutorial

./: .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
.claude/: settings.local.json
docs/: build-pdf.sh  header.tex  setup-guide.md
docs/plans/: 2026-04-08-vr-tutorial-design.md  2026-04-08-vr-tutorial-implementation.md  2026-04-15-ursina-vr-integration-summary.md
exercises/ex1_hello_ursina/: README.md  hello_cube.py
exercises/ex2_build_a_room/: README.md  solution.py  template.py
exercises/ex3_make_it_real/: README.md  solution.py  template.py
exercises/ex4_pick_up_star/: README.md  gamepad_demo.py  solution.py  template.py
exercises/ex5_mini_experiment/: README.md  solution.py  template.py
exercises/ex6_load_models/: README.md  simple-load.py  solution.py  template.py
exercises/ex7_maze_explorer/: README.md  maze_practice_solution.py  solution.py  template.py  visualize.ipynb
scripts/: generate_images.py
site/: hugo.toml
site/content/: _index.md
slides/: .npmrc  package.json  pnpm-lock.yaml  slides.md
slides/components/: comBlock.vue  comFigure.vue
slides/layouts/: pgComparison.vue  pgQuiz.vue  pgSplit.vue  pgThreeBlock.vue  pgTwoColumn.vue
starter/: INSTALL.md  requirements.txt
starter/ex1_hello_ursina/: hello_cube.py
starter/ex2_build_a_room/: template.py
starter/ex3_make_it_real/: template.py
starter/ex4_pick_up_star/: template.py
starter/ex5_mini_experiment/: template.py
starter/ex6_load_models/: template.py
vr_pimax/: GUIDE.md  demo.py  ex5_vr.py  ex7_vr.py  maze_experiment.py  probe.py  vr_utils.py
(+19 files in other folders)
