[project]
name = "vr-tutorial"
version = "0.1.0"
description = "From Screen to Scene: Building VR Experiments with Python"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ursina<8",
    "panda3d",
    "panda3d-openvr",
    "openvr",
    "pygame",
    "matplotlib",
    "jupyter",
]

[tool.setuptools]
py-modules = []
